bugfix line 27 (letter-spacing)

--- a/src/sass/components/_products.scss
+++ b/src/sass/components/_products.scss
@@ -24,7 +24,7 @@
   }
   font-weight: 400;
   line-height: 1.16;
-  letter-spacing: 0em;
+  letter-spacing: 0;
 }
 
 .products__header {
